Add header and hero secsion

--- a/index.html
+++ b/index.html
@@ -4,13 +4,70 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Choose</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- HEADER -->
+<header class="header">
+  <div class="header-container">
+    <!-- HEADER-TOP -->
+    <div class="header-top">
+<div class="header-top-container container">
+  <h2 class="top-text">Free Shipping on All Orders $75+</h2>
+  <a class="header-logo__link logo-link" href="#">
+    <img class="logo-img" src="img/logo.png" alt="logo" width="188" height="82">
+  </a>
+  <button class="header-btn search" type="button">
+    <span class="btn-span search-span"></span>
+    </button>
+  <button class="header-btn cart" type="button">
+    <span class="btn-span cart-span"></span>
+  </button>
+  <button class="header-btn account" type="button">
+    <span class="btn-span account-span"></span>
+  </button>
+</div>
+    </div>
+
+    <!-- SITNAV -->
+    <nav class="sitenav">
+      <ul class="sitenav__list">
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="index.html">Home</a>
+        </li>
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="#">New arrivals</a>
+        </li>
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="#">trending</a>
+        </li>
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="#">Shop</a>
+        </li>
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="#">About us</a>
+        </li>
+        <li class="sitenav__item">
+          <a class="sitenav__link" href="#">FAQ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<!-- MAIN -->
+<main class="main-content">
+  <!-- HERO -->
+<section class="hero">
+<div class="hero-container container">
+  ]<h2 class="hero-text">SHOP THE NEW COLLECTION</h2>
+  <a class="button" href="#">see</a>
+</div>
+</section>
+</main>
 <script src="js/main.js"></script>
 </body>
 </html>
