--- a/index.html
+++ b/index.html
@@ -67,7 +67,141 @@
   <a class="button" href="#">see</a>
 </div>
 </section>
+<section class="collection container">
+<h2 class="collection-header">Collection list</h2>
+<ul class="collection-lists">
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/FloralMaxiDressPetalbyRoseGold_1280x.webp" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/adele-shafiee-vagr_XT9Cms-unsplash.jpg" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/edoardo-cuoghi-_NrW6FV5LKc-unsplash.jpg" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/kate-skumen-PJRabkuH3_Q-unsplash.jpg" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/FloralMaxiDressPetalbyRoseGold_1280x.webp" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+  <li class="collection-item">
+    <a class="collection-card" href="#">
+      <img class="collection-card-img" src="img/FloralMaxiDressPetalbyRoseGold_1280x.webp" alt="Basic Maxi Dress" width="380" height="340">
+      <h3 class="collection-card-text">Basic Maxi Dress</h3>
+      <span class="price-sale">$20.00</span>
+      <span class="price-regular">$27.99</span>
+    </a>
+  </li>
+</ul>
+</section>
 </main>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-container container">
+    <div class="footer-top">
+      <div class="footer-content">
+        <h2 class="footer-header" >Полезные ссылки</h2>
+        <ul class="footer-lists">
+          <li class="footer-item">
+            <a class="footer-link footer-text" href="#">Доставка</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link footer-text" href="#">Оплата </a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link footer-text" href="#">Акции</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link footer-text" href="#">Политика конфиденциальности</a>
+          </li>
+        </ul>
+        </div>
+        <div class="footer-content">
+          <h2 class="footer-header" >оплата</h2>
+          <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper justo, nec, pellentesque.</p>
+          <a class="footer-payment-link" href="#">
+            <img class="footer-payment-img" src="img/visa.svg" alt="visa" width="45" height="30">
+          </a>
+          <a class="footer-payment-link" href="#">
+            <img class="footer-payment-img" src="img/master-card.svg" alt="visa" width="45" height="30">
+          </a>
+        </div>
+
+        <div class="footer-content">
+          <h2 class="footer-header" >Полезные ссылки</h2>
+          <ul class="footer-lists">
+            <li class="footer-contact-item">
+              <a class="footer-link footer-text" href="#">8 (812) 234-56-55</a>
+            </li>
+            <li class="footer-contact-item">
+              <a class="footer-link footer-text" href="#">8 (812) 234-56-55</a>
+            </li>
+            <li class="footer-contact-item">
+              <a class="footer-link footer-text" href="#">https://ssu-choose.netlify.app/</a>
+            </li>
+             </ul>
+          </div>
+
+          <div class="footer-content">
+            <h2 class="footer-header" >социальные сети</h2>
+            <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper justo, nec, pellentesque.</p>
+            <a class="social-link" href="#">
+              <img class="social-img" src="img/youtube.svg" alt="visa" width="26" height="26">
+            </a>
+            <a class="social-link" href="#">
+              <img class="social-img" src="img/social_vk.svg" alt="visa" width="26" height="26">
+            </a>
+            <a class="social-link" href="#">
+              <img class="social-img" src="img/facebook.svg" alt="visa" width="26" height="26">
+            </a>
+            <a class="social-link" href="#">
+              <img class="social-img" src="img/telegram.svg" alt="visa" width="26" height="26">
+            </a>
+            <a class="social-link" href="#">
+              <img class="social-img" src="img/icons_etsy.svg" alt="visa" width="26" height="26">
+            </a>
+          </div>
+    </div>
+      <ul class="footer-bottom-list">
+        <li class="footer-bottom-item">
+          <a class="footer-text" href="#">(c) 2022 Choose</a>
+        </li>
+        <li class="footer-bottom-item">
+          <a class="footer-text" href="#">Договор публичной офферты</a>
+        </li>
+        <li class="footer-bottom-item">
+          <a class="footer-text" href="#">Контрагентам</a>
+        </li>
+      </ul>
+  </div>
+  </footer>
 <script src="js/main.js"></script>
 </body>
 </html>
